# sports-digest-agent

./: .gitignore  LICENSE  README.md  requirements.txt  user_preferences.json
client/: fastagent.config.yaml  fastagent.secrets.yaml.example  news-agent-client.py  pyproject.toml  sport-agent-client.py
examples/: agent_journey_viewer.html  newspaper_20251008_094147.html  newspaper_20251008_094147.json  newspaper_20251008_094147_agent_journey.json  newspaper_20251008_160145.html  newspaper_20251008_160145.json  newspaper_20251008_160145_agent_journey.json
notebooks/: 01_basic_tools.ipynb  0201_advanced_mcp_crud_tools.ipynb  0202_advanced_mcp_smart_tools.ipynb  pyproject.toml
src/server/: app_context.py  sport_server.py  weather_server.py
src/server/config/: constants.py  settings.py
src/server/services/: article_memory_v1.py  article_memory_v2.py  email_service.py  http_client.py  interests_file.py  newspaper_service.py  sport_email_service.py
src/server/templates/: digest_email_v1.html  newspaper_email_v1.html  newspaper_email_v2.html
