[project]
name = "nyu_agentic_ai_workshop"
version = "0.1.0"
description = "nyu_agentic_ai_workshop"
requires-python = ">=3.13.7"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "fastmcp>=2.11.3",
    "typing-extensions>=4.15.0",
    "deprecated>=1.2.18",
    "ipykernel>=6.30.1",
    "plotly>=6.3.0",
    "kaleido>=0.2.1",
    "pandas>=2.3.2",
    "nbformat>=5.10.4",
    "python-dotenv>=1.1.1",
    "black[jupyter]>=25.9.0",
    "requests-cache>=1.2.1",
    "html2text>=2025.4.15",
    "ipywidgets>=8.1.7",
    "html-to-markdown>=1.16.0",
    "jinja2>=3.1.6",
    "boto3>=1.40.45",
    "markdown>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
